--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -10,8 +10,24 @@
 }
 
 header .top_strip {
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--primary);
+    border-top: 1px solid rgba(67, 64, 64, 0.1);
+    border-bottom: 1px solid rgba(67, 64, 64, 0.1);
+    /* background-color: var(--primary); */
 }
 
+.link:hover{
+    color: var(--primary);
+}
+
+ul {
+    display: flex;
+    gap: 10px;
+    padding: 0;
+    margin: 0;
+    color: var(--primary);
+}
+
+li {
+    list-style: none;
+    color: var(--primary);
+}
